app/styles/modules/_word-list.scss
.wordListWrapper {
  @media screen and (max-width: $small) {
    padding: 0px 11px 0px 9px;
  }
}

// Styles for the list of words that drops down
// when you search for a word

.wordList {
  border: 1px solid $header-background;
  box-shadow: 0px 1px 3px #DDD;
  left: 19px;
  position: absolute;
  width: 100%;
  z-index: 2;
  li:not(:last-of-type) {
    border-bottom: 1px solid #DDD;
  }
  li {
    &.selected a {
      background: #E3E3E3;
    }
    a {
      background: #FFF;
      color: $dropdown-anchor-color;
      cursor: pointer;
      display: block;
      padding: 20px;
      text-decoration: none;
      &:hover {
        background: #F3F3F3;
      }
      &.empty {
        cursor: inherit;
        &:hover {
          background: #FFF;
        }
      }
    }
  }
  @media screen and (max-width: $medium) {
    left: -1px;
  }
}

